syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "EmailServiceGrpcApp";
 
package email_service;
 
// определение сервиса
service EmailServiceGrpc {
  // отправка сообщения
  rpc Send (EmailRequest) returns (google.protobuf.Empty);
}
 
// сообщение от клиента содержит name
message EmailRequest {
    string EmailTo = 1;
    string EmailFrom = 2;
    string MessageBody = 3;
}
 
// сообщение клиенту содержит message
message EmailReply {
    string EmailTo = 1;
    string EmailFrom = 2;
    string Message = 3;
}